# 2024-boot-camp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  download_dep.sh  init_bash  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile
docker/gpu/: docker-compose.yaml
include/: audio.hpp  os.hpp
pp_src/: main.cpp  model.hpp
py_src/: model.py
unit_test/env_tester/: CMakeLists.txt  libtorch_test.cpp  py_tester.py
unit_test/sox_based_audio_read/: CMakeLists.txt  cmake_build.sh  generate_dummy_audio.py  main.cpp
