[tool.poetry]
name = "deeplearning-tamplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
torch = "^2.3.1"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
soundfile = "^0.12.1"
lightning = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
